Making my profile page prettier

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Welcome, buddies!</title>
-    <meta name="description" content="This is my brand new profile page!">
+    <meta name="description" content="My brand new profile page!">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/20c9470791.js" crossorigin="anonymous"></script>
