--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p>
         📍 Based in Bologna "The Fat, The Erudite, The Red".
         Previously physicist working for CERN, now beginner in web app developing.
-        Big love for literature, music (⬇️ check my latest programming playlist), phylosophy and crossowords 📝.
+        Big love for literature, music (⬇️ check my latest programming playlist), phylosophy and crosswords 📝.
         Potterhead 🐍🪄.
       </p>
       <a class="btn-green" href = "https://open.spotify.com/playlist/5UIjOQnHay70YBbu2Ei4yP?si=ee77f1cf7b544b42" target="_blank">Programming Playlist</a>
